<resources>
    <string name="app_name">Quiz</string>
    <string name="q1">Q1. What was the day on 15th august 1947 ?</string>
    <string name="q2">Q2. Which word does NOT belong with the others ?</string>
    <string name="q3">Q3. What is the official national sport of Bulgaria ?</string>
    <string name="q4">Q4. Square root(s) of 81 ?</string>
    <string name="q5">Q5. Harry Potter books involving Horcruxes ?</string>
    <string name="q6">Q6. What does a vexillogist study ?</string>
    <string name="q7">Q7. What is the lightest metal ?</string>
    <string name="q8">Q8. What is the US state capital of Mississippi?</string>
</resources>
