<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.manan.logicalreasoning.MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/background"
            android:gravity="center"
            android:text="Do you Know!!"
            android:textColor="@color/text"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/background"
            android:gravity="center"
            android:text="Single Choice Answer"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textColor="@color/text" />

            <RadioGroup
                android:id="@+id/rg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Saturday" />

                <RadioButton
                    android:id="@+id/q1_ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Friday" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sunday" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thursday" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textColor="@color/text" />

            <RadioGroup
                android:id="@+id/rg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tulip" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rose" />

                <RadioButton
                    android:id="@+id/q2_ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bud" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Daisy" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textColor="@color/text" />

            <RadioGroup
                android:id="@+id/rg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Football" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cricket" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Throw Ball" />

                <RadioButton
                    android:id="@+id/q3_ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Weightlifting" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/background"
            android:gravity="center"
            android:text="Multiple Choice Answer"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textColor="@color/text" />

            <CheckBox
                android:id="@+id/q4_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="9" />

            <CheckBox
                android:id="@+id/q4_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8" />

            <CheckBox
                android:id="@+id/q4_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-9" />

            <CheckBox
                android:id="@+id/q4_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textColor="@color/text" />

            <CheckBox
                android:id="@+id/q5_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Half Blood Prince" />

            <CheckBox
                android:id="@+id/q5_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Goblet of Fire" />

            <CheckBox
                android:id="@+id/q5_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Order of phoenix" />

            <CheckBox
                android:id="@+id/q5_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Deathly Hallows" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/background"
            android:gravity="center"
            android:text="One Word Answer"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                android:textColor="@color/text" />

            <EditText
                android:id="@+id/q6_ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type your answer here"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q7"
                android:textColor="@color/text" />

            <EditText
                android:id="@+id/q7_ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type your answer here"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q8"
                android:textColor="@color/text" />

            <EditText
                android:id="@+id/q8_ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type your answer here"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/text"
                android:onClick="submit"
                android:text="submit"
                android:textColor="@color/background" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/text"
                android:onClick="reset"
                android:text="reset"
                android:textColor="@color/background" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>